Implement AG Grid integration, enhanced drag-and-drop functionality, task prioritization, and canvas-based cursor architecture for project management application. Key updates include database schema modifications, new components for task grid view and cursor rendering, improved Kanban board features, and API enhancements for task management. Comprehensive testing recommendations and future enhancement suggestions included.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@types/bcryptjs": "^2.4.6",
+    "ag-grid-community": "^35.0.0",
+    "ag-grid-react": "^35.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
